--- a/i18n/resources/zh/preparedness.json
+++ b/i18n/resources/zh/preparedness.json
@@ -176,26 +176,35 @@
     },
     "sections": {
       "Prevention": {
-        "dengue-01": "清除花盆、桶和托盘中的积水。",
-        "dengue-02": "定期清理屋顶排水沟并确保排水畅通。",
-        "dengue-03": "每两天更换花瓶、碗和鸟浴盆中的水。",
-        "dengue-04": "安装纱窗和纱门以防止蚊虫进入。"
+        "title": "预防",
+        "items": {
+          "dengue-01": "清除花盆、桶和托盘中的积水。",
+          "dengue-02": "清理屋顶排水槽并确保排水顺畅。",
+          "dengue-03": "每两天更换花瓶、碗及鸟浴盆中的水。",
+          "dengue-04": "安装纱窗与纱门，阻挡蚊虫进入。"
+        }
       },
-      "Recognising Symptoms": {
-        "dengue-05": "突然发高烧，持续 2 至 7 天。",
-        "dengue-06": "严重头痛，尤其是眼睛后方。",
-        "dengue-07": "身体肌肉和关节疼痛。",
-        "dengue-08": "恶心、呕吐或食欲不振。",
-        "dengue-09": "发烧几天后出现皮疹。",
-        "dengue-10": "牙龈出血、持续呕吐、腹痛。"
+      "RecognisingSymptoms": {
+        "title": "识别症状",
+        "items": {
+          "dengue-05": "突发高烧，可持续 2–7 天。",
+          "dengue-06": "严重头痛，尤其是眼后部疼痛。",
+          "dengue-07": "肌肉与关节疼痛。",
+          "dengue-08": "恶心、呕吐或食欲不振。",
+          "dengue-09": "发烧后几天可能出现皮疹。",
+          "dengue-10": "牙龈出血、持续呕吐、腹痛等警示症状。"
+        }
       },
-      "Treatment & Care": {
-        "dengue-11": "如怀疑登革热，请立即就医。",
-        "dengue-12": "多喝水以避免脱水。",
-        "dengue-13": "充分休息，避免剧烈活动，直至完全康复。",
-        "dengue-14": "遵医嘱服药（避免使用阿司匹林或布洛芬）。",
-        "dengue-15": "使用蚊帐或驱蚊剂以防将病毒传播给他人。",
-        "dengue-16": "按时复诊并接受医生的健康监测。"
+      "Treatment&Care": {
+        "title": "治疗与护理",
+        "items": {
+          "dengue-11": "一旦怀疑登革热，立即就医。",
+          "dengue-12": "多喝水，防止脱水。",
+          "dengue-13": "充分休息，直至完全康复，避免过度运动。",
+          "dengue-14": "仅服用医生认可的药物（避免阿司匹林/布洛芬）。",
+          "dengue-15": "使用蚊帐或驱蚊措施，避免传染他人。",
+          "dengue-16": "按医嘱复诊并进行健康监测。"
+        }
       }
     },
     "externalResources": {
