--- a/i18n/resources/ta/preparedness.json
+++ b/i18n/resources/ta/preparedness.json
@@ -176,26 +176,35 @@
     },
     "sections": {
       "Prevention": {
-        "dengue-01": "பூந்தொட்டிகள், வாளிகள் மற்றும் தட்டுகளில் தேங்கிய நீரை அகற்றுங்கள்.",
-        "dengue-02": "கூரையோர குழாய்களை சுத்தமாக வைத்திருங்கள் மற்றும் நீர் தேங்காமல் பார்த்துக்கொள்ளுங்கள்.",
-        "dengue-03": "மலர் குவளைகள் மற்றும் குளங்களில் உள்ள நீரை 2 நாட்களுக்கு ஒருமுறை மாற்றுங்கள்.",
-        "dengue-04": "கொசுக்கள் வீட்டுக்குள் நுழைவதைத் தடுக்க ஜன்னல்கள் மற்றும் கதவுகளுக்கு வலைகளை பொருத்துங்கள்."
+        "title": "தடுப்பு",
+        "items": {
+          "dengue-01": "கூண்டுகள், வாளி, தட்டுகளில் தேங்கிய நீரை நீக்குங்கள்.",
+          "dengue-02": "கூரை வடிகால்களை சுத்தப்படுத்தி தண்ணீர் நன்கு வெளியேறுமாறு பாருங்கள்.",
+          "dengue-03": "பூக்களுக்கான பூச்செண்டி/கிண்ணம்/பறவைக் குளங்களில் உள்ள நீரை 2 நாட்களுக்கு ஒருமுறை மாற்றுங்கள்.",
+          "dengue-04": "சாளர-கதவுகளில் வலை பொருத்தி கொசுக்களைத் தடுக்கவும்."
+        }
       },
-      "Recognising Symptoms": {
-        "dengue-05": "திடீரென உயர் காய்ச்சல், 2 முதல் 7 நாட்கள் நீடிக்கும்.",
-        "dengue-06": "கண்களின் பின்னால் கடுமையான தலைவலி.",
-        "dengue-07": "உடல், தசைகள் மற்றும் மூட்டு வலிகள்.",
-        "dengue-08": "வாந்தி, வாந்தி உணர்வு அல்லது உணவுவிருப்பமின்மை.",
-        "dengue-09": "காய்ச்சல் ஆரம்பித்த சில நாட்களுக்கு பிறகு தோல் சதைப்புண்கள் தோன்றுதல்.",
-        "dengue-10": "பற்கள் இரத்தம், தொடர்ச்சியான வாந்தி, வயிற்று வலி."
+      "RecognisingSymptoms": {
+        "title": "அறிகுறிகளை அடையாளம் காணுதல்",
+        "items": {
+          "dengue-05": "எதிர்பாராத விதமாக 2–7 நாட்கள் நீடிக்கும் அதிக காய்ச்சல்.",
+          "dengue-06": "கண் பின்னால் அதிக தலைவலி.",
+          "dengue-07": "உடல் தசை மற்றும் மூட்டு வலி.",
+          "dengue-08": "வாந்தி உணர்வு, வாந்தி அல்லது உணவில் ஆர்வமின்மை.",
+          "dengue-09": "காய்ச்சல் தொடங்கி சில நாட்களில் தோலில் சிரங்கு தோன்றுதல்.",
+          "dengue-10": "பல் ஈறி இரத்தம், தொடர்ச்சியான வாந்தி, வயிற்று வலி போன்ற எச்சரிக்கை அறிகுறிகள்."
+        }
       },
-      "Treatment & Care": {
-        "dengue-11": "டெங்கு என சந்தேகமிருந்தால் உடனடியாக மருத்துவ உதவியை நாடுங்கள்.",
-        "dengue-12": "நீரிழிவு ஏற்படாமல் போதுமான அளவு தண்ணீர் குடியுங்கள்.",
-        "dengue-13": "முழுமையான குணமடையும் வரை போதுமான ஓய்வு எடுங்கள்.",
-        "dengue-14": "மருத்துவர் பரிந்துரைத்த மருந்துகளை மட்டுமே எடுத்துக் கொள்ளுங்கள் (ஆஸ்பிரின்/இபுபுரோபனை தவிர்க்கவும்).",
-        "dengue-15": "மற்றவர்களுக்கு தொற்று பரவாமல் தடுக்க கொசு வலைகள் அல்லது பூச்சிகொல்லிகள் பயன்படுத்துங்கள்.",
-        "dengue-16": "மருத்துவ பரிசோதனை மற்றும் பின்தொடர்புகளுக்காக சுகாதார நிபுணர்களை அணுகுங்கள்."
+      "Treatment&Care": {
+        "title": "சிகிச்சை & பராமரிப்பு",
+        "items": {
+          "dengue-11": "டெங்கு சந்தேகமிருந்தால் உடனடியாக மருத்துவரை அணுகுங்கள்.",
+          "dengue-12": "நீரிழப்பு தவிர்க்க போதுமான அளவு திரவங்களை அருந்துங்கள்.",
+          "dengue-13": "முழுமையாக குணமடையும் வரை போதிய ஓய்வு எடுத்துக் கொள்ளுங்கள்.",
+          "dengue-14": "மருத்துவர் பரிந்துரைத்த மருந்துகளை மட்டும் உட்கொள்ளுங்கள் (அஸ்பிரின்/இபுபுரோஃபென் தவிர்க்கவும்).",
+          "dengue-15": "மற்றவர்களுக்கு பரவாமல் இருக்க கொசு வலை/விலக்கிகளை பயன்படுத்துங்கள்.",
+          "dengue-16": "மருத்துவர்களின் தொடர்ச்சி பரிசோதனைகளில் கலந்து கொள்ளுங்கள்."
+        }
       }
     },
     "externalResources": {
