--- a/i18n/resources/ta/quiz.json
+++ b/i18n/resources/ta/quiz.json
@@ -1,5 +1,9 @@
 {
   "version": "1.0",
+  "strings": {
+    "quizzesSuffix": "வினாடி வினா",
+    "introTemplate": "{{topic}}-ன் போது தன்னம்பிக்கையை வளர்க்கவும் பாதுகாப்பாக இருக்கவும் இந்த வினாடி வினாக்களை முடிக்கவும்."
+  },
   "categories": [
     {
       "id": "flood",
