--- a/i18n/resources/en/quiz.json
+++ b/i18n/resources/en/quiz.json
@@ -1,5 +1,9 @@
 {
   "version": "1.0",
+  "strings": {
+    "quizzesSuffix": "Quizzes",
+    "introTemplate": "Complete these quizzes to build confidence and stay safe during {{topic}}."
+  },
   "categories": [
     {
       "id": "flood",
