--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -6,7 +6,9 @@
     "proceed": "தொடரவும்",
     "error": "பிழை",
     "close": "மூடு",
-    "see_more": "மேலும் பார்க்க"
+    "see_more": "மேலும் பார்க்க",
+    "hint": "குறிப்பு",
+    "done": "முடிந்தது"
   },
 
   "home": {
@@ -164,23 +166,94 @@
   },
   "games": {
     "title": "பாதுகாப்பு வினாடி வினா",
-    "subtitle": "உங்களின் தயார்நிலை திறன்களைச் சோதிக்கவும்.",
+    "subtitle": "உங்கள் தயார்நிலை திறன்களை சோதிக்கவும்.",
+
     "stats": {
-      "taken": "எடுத்த வினாடி வினாக்கள்",
+      "taken": "வினாக்கள் முடிக்கப்பட்டது",
       "accuracy": "சமீபத்திய துல்லியம்",
       "streak": "தொடர் நாட்கள்"
     },
+
     "daily": {
       "title": "தினசரி சவால்",
-      "review_title": "தினசரி சவால் — மதிப்பாய்வு",
+      "review_title": "தினசரி சவால் — மீளாய்வு",
       "category_label": "தினசரி",
       "loading": "ஏற்றுகிறது...",
-      "review_answer": "பதில்களைப் பார்வையிடு",
-      "start": "சவாலை தொடங்கு",
+      "review_answer": "பதில்களை பார்க்க",
+      "start": "சவாலை தொடங்கவும்",
       "questions_count": "{{count}} கேள்விகள்"
     },
-    "quick_tips": "வேகக் குறிப்புகள்",
-    "categories_quiz": "பிரிவு வினாடி வினா"
+
+    "quick_tips": "விரைவான குறிப்புகள்",
+    "categories_quiz": "வகை வாரியாக வினாக்கள்",
+
+     "toast": {
+      "correct": "சரியானது!",
+      "incorrect": "தவறானது!",
+      "timesup": "நேரம் முடிந்தது!"
+    },
+    "encourage": {
+      "1": "ஐயோ! அது தந்திரமாக இருந்தது.",
+      "2": "எக்ஸ்பி தவறவிட்டது... ஆனால் அறிவைப் பெற்றது!",
+      "3": "அடுத்ததைப் பெறுவீர்கள்!"
+    },
+    "generic": {
+      "quiz": "வினாடி வினா",
+      "question": "கேள்வி {{index}}"
+    },
+
+    "leave": {
+      "title": "வினாவை விட்டு வெளியேறவா?",
+      "message": "உங்கள் முன்னேற்றம் சேமிக்கப்படாது. நீங்கள் நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+      "confirm": "வெளியேறு",
+      "cancel": "தங்க"
+    },
+
+    "play": {
+      "time": "நேரம்",
+      "times_up": "நேரம் முடிந்தது!",
+      "no_hint": "இந்த கேள்விக்கு குறிப்புகள் இல்லை."
+    },
+
+    "settings": {
+      "title": "வினா அமைப்புகள்",
+      "sound": "ஒலி விளைவுகள்",
+      "haptics": "அதிர்வு"
+    },
+    "result": {
+      "default_title": "வினாடி வினா சவால்",
+      "your_score": "உங்கள் மதிப்பெண்",
+      "titles": {
+        "outstanding": "அற்புதம்! தயார் நிபுணர்!",
+        "great": "சூப்பர்—தயார் வீரர்!",
+        "ok": "நன்று—பயிற்சி தொடருங்கள்!",
+        "start": "நல்ல தொடக்கம்—மேலும் முன்னேறலாம்!"
+      },
+      "time_taken": "செலவிட்ட நேரம்",
+      "xp_gained": "பெற்ற XP",
+      "xp_plus": "+{{xp}} XP",
+      "review_answer": "பதில்களை பார்க்க",
+      "share_result": "மதிப்பெண்ணைப் பகிர்",
+      "back_to_games": "விளையாட்டுகளுக்கு திரும்பு",
+      "review_title": "கேள்விகளை மீள்பார்வு",
+      "time_min_sec": "{{m}} நிமி {{s}} வினா",
+      "time_sec": "{{s}} வினா",
+      "share_message": "🎉 \"{{title}}\"ல் நான் {{time}} நேரத்தில் {{pct}}% (+{{score}} XP) பெற்றேன். நீங்களா வெல்லப் போவது?",
+      "quotes": {
+        "1": "கற்றல் ஒரு பயணம்—நீங்கள் இப்போதுதான் லெவல் அப்!",
+        "2": "இன்று தயார், நாளை நம்பிக்கை.",
+        "3": "சிறு படிகள் பெரிய தயாரிப்பை உருவாக்கும்.",
+        "4": "இப்போதே அறிவு—பின்னர் பாதுகாப்பு.",
+        "5": "தயாராக இருப்பது ஒரு பழக்கம்.",
+        "6": "பயிற்சி—தயாராக்கும்.",
+        "7": "அமைதி, தயார், பாதுகாப்பு.",
+        "8": "ஒவ்வொரு சரியான பதிலும் ஒரு பாதுகாப்பு அடுக்கு.",
+        "9": "தயார்பாடு தான் சிறந்த திட்டம் B.",
+        "10": "இன்றைய பயிற்சிக்கு உங்கள் எதிர்கால நான் நன்றி சொல்லும்.",
+        "11": "அவசரத்தில்—அறிவு தான் சக்தி.",
+        "12": "இன்று சிறிது கற்றால், நாளை பெரிய பயன்."
+      }
+    }
   },
   "preparedness_screen": {
     "preparedness_word": "தயார்நிலை",
