--- a/i18n/resources/zh/common.json
+++ b/i18n/resources/zh/common.json
@@ -6,7 +6,9 @@
     "proceed": "继续",
     "error": "错误",
     "close": "关闭",
-    "see_more": "查看更多"
+    "see_more": "查看更多",
+    "hint": "提示",
+    "done": "完成"
   },
   "home": {
     "your_location": "你的位置",
@@ -143,23 +145,94 @@
   },
   "games": {
     "title": "安全测验",
-    "subtitle": "测一测你的应急能力。",
+    "subtitle": "测试您的防灾准备技能。",
+
     "stats": {
       "taken": "已完成测验",
-      "accuracy": "近期正确率",
+      "accuracy": "最近准确率",
       "streak": "连续天数"
     },
+
     "daily": {
       "title": "每日挑战",
       "review_title": "每日挑战 — 回顾",
       "category_label": "每日",
-      "loading": "载入中…",
-      "review_answer": "查看解答",
+      "loading": "加载中...",
+      "review_answer": "查看答案",
       "start": "开始挑战",
-      "questions_count": "{{count}} 题"
+      "questions_count": "{{count}} 道题"
     },
+
     "quick_tips": "快速提示",
-    "categories_quiz": "分类测验"
+    "categories_quiz": "分类测验",
+
+    "toast": {
+      "correct": "正确!",
+      "incorrect": "不正确!",
+      "timesup": "时间到了!"
+    },
+    "encourage": {
+      "1": "哎呀！这太棘手了。",
+      "2": "经验值没到……但学到了知识！",
+      "3": "你会得到下一个！"
+    },
+    "generic": {
+      "quiz": "测验",
+      "question": "问题 {{index}}"
+    },
+
+    "leave": {
+      "title": "退出测验？",
+      "message": "您的进度不会保存。确定要退出吗？",
+      "confirm": "退出",
+      "cancel": "继续"
+    },
+
+    "play": {
+      "time": "时间",
+      "times_up": "时间到！",
+      "no_hint": "此问题没有提示。"
+    },
+
+    "settings": {
+      "title": "测验设置",
+      "sound": "音效",
+      "haptics": "震动"
+    },
+    "result": {
+      "default_title": "测验挑战",
+      "your_score": "你的分数",
+      "titles": {
+        "outstanding": "太棒了！应变达人！",
+        "great": "很棒——准备就绪！",
+        "ok": "不错——继续练习！",
+        "start": "好的开始——一起升级！"
+      },
+      "time_taken": "用时",
+      "xp_gained": "获得 XP",
+      "xp_plus": "+{{xp}} XP",
+      "review_answer": "查看答案",
+      "share_result": "分享成绩",
+      "back_to_games": "返回游戏",
+      "review_title": "回顾题目",
+      "time_min_sec": "{{m}}分{{s}}秒",
+      "time_sec": "{{s}}秒",
+      "share_message": "🎉 我在“{{title}}”中取得 {{pct}}%（+{{score}} XP），用时 {{time}}。来挑战我吗？",
+      "quotes": {
+        "1": "学习是旅程，你刚刚升级了。",
+        "2": "今天准备，明天更自信。",
+        "3": "小步累积，筑起强大应对力。",
+        "4": "现在的知识，是以后的安全。",
+        "5": "准备是习惯，而不是瞬间。",
+        "6": "练习让你更有准备。",
+        "7": "冷静、准备、平安。",
+        "8": "每答一个问题，安全再多一层。",
+        "9": "预备是最好的计划B。",
+        "10": "未来的你会感谢今天的训练。",
+        "11": "遇到紧急情况，知识就是力量。",
+        "12": "今天学一点，明天省很多。"
+      }
+    }
   },
   "preparedness_screen": {
     "preparedness_word": "防灾准备",
