--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -533,5 +533,33 @@
         ]
       }
     }
+  },
+  "bookmarks": {
+    "title": "சேமித்த கேள்விகள்",
+    "chips": {
+      "all": "அனைத்தும்",
+      "flood": "வெள்ளம்",
+      "haze": "மூடுபனி/மாசு",
+      "storm": "இடி மின்னல்",
+      "dengue": "டெங்கு",
+      "wind": "புயல் காற்று",
+      "aid": "முதல் உதவி",
+      "fire": "தீ",
+      "kit": "அவசரக் கிட்",
+      "disease": "நோய்",
+      "earthquake": "நிலநடுக்கம்"
+    },
+    "empty": {
+      "no_matches_title": "இங்கே பொருந்துவதில்லை",
+      "no_matches_body": "வேறு வகையை முயலுங்கள் அல்லது தேடலை அழிக்கவும்.",
+      "none_title": "சேமித்த கேள்விகள் இல்லை",
+      "none_body": "ஏதேனும் கேள்வியில் உள்ள புத்தகக்குறி சின்னத்தைத் தட்டி இங்கே சேமிக்கலாம்."
+    },
+    "confirm": {
+      "title": "புத்தகக்குறியை நீக்கவா?",
+      "message": "இந்த கேள்வி உங்கள் சேமிப்பிலிருந்து நீக்கப்படும்.",
+      "delete": "நீக்கு",
+      "cancel": "ரத்து"
+    }
   }
 }
