--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -119,13 +119,19 @@
     "location": "இடம்",
     "country_sg": "சிங்கப்பூர்",
     "emergency_contacts_setup": "அவசர தொடர்புகள் அமைப்பு",
-    "account_settings": "கணக்கு அமைப்புகள்",
-    "change_password": "கடவுச்சொல்லை மாற்று",
-    "logout": "வெளியேறு",
     "done": "முடிந்தது",
     "cancel": "ரத்து",
     "theme_light": "ஒளிர்வு",
-    "theme_dark": "இருள்"
+    "theme_dark": "இருள்",
+    "data_management": "தரவு மேலாண்மை",
+    "clear_cache": "தற்காலிக சேமிப்பை அழி",
+    "reset_all": "எல்லா தரவையும் மீட்டமை",
+    "clear_cache_title": "தற்காலிக சேமிப்பை அழி?",
+    "clear_cache_msg": "படங்கள், முன்னொட்டுகள் மற்றும் தற்காலிக சேமிப்பில் உள்ள தேடல்கள் போன்ற தற்காலிக தரவை இது நீக்கும். உங்கள் புக்மார்க்குகள் மற்றும் விருப்பத்தேர்வுகள் அப்படியே இருக்கும்.",
+    "clear": "அழி",
+    "reset_all_title": "எல்லா தரவையும் மீட்டமை?",
+    "reset_all_msg": "இது அனைத்து உள்ளூர் தரவையும் நீக்கும்: புக்மார்க்குகள், வினாடி வினா வரலாறு, விருப்பத்தேர்வுகள் மற்றும் தற்காலிக சேமிப்புகள். இதை செயல்தவிர்க்க முடியாது.",
+    "reset": "மீட்டமை"
   },
   "sos": {
     "title": "SOS அவசர",
@@ -187,7 +193,7 @@
     "quick_tips": "விரைவான குறிப்புகள்",
     "categories_quiz": "வகை வாரியாக வினாக்கள்",
 
-     "toast": {
+    "toast": {
       "correct": "சரியானது!",
       "incorrect": "தவறானது!",
       "timesup": "நேரம் முடிந்தது!"
