UI update for map, home, settings, chatbot and adjust side menu tab

--- a/i18n/resources/en/common.json
+++ b/i18n/resources/en/common.json
@@ -96,6 +96,8 @@
     "more": "More"
   },
   "drawer": {
+    "map": "Map",
+    "early_warning": "Early Warning",
     "checklist": "Checklist",
     "external_resources": "External Resources",
     "bookmark": "Bookmark",
