--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -99,6 +99,8 @@
     "more": "மேலும்"
   },
   "drawer": {
+    "map": "வரைபடம்",
+    "early_warning": "முன்கூட்டிய எச்சரிக்கை",
     "checklist": "சரிபார்ப்பு பட்டியல்",
     "external_resources": "வெளிப்புற வளங்கள்",
     "bookmark": "புக் மார்க்",
