--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -89,7 +89,16 @@
     "confirm_call_title": "{{title}} எண்ணிற்கு அழைக்கவா?",
     "confirm_call_body": "{{number}} முன்கூட்டியே நிரப்பப்பட்டவாறு தொலைபேசி பயன்பாட்டைத் திறக்கவா?",
     "call_manual": "தயவுசெய்து {{num}} எண்ணை கைமுறையாக அழைக்கவும்.",
-    "dial_error": "தொலைபேசி டயலரைத் திறக்க முடியவில்லை."
+    "dial_error": "தொலைபேசி டயலரைத் திறக்க முடியவில்லை.",
+
+    "metric": {
+      "rain": "மழை",
+      "wind": "காற்று",
+      "temp": "வெப்பநிலை",
+      "hum": "ஈரப்பதம்",
+      "dengue": "டெங்கு",
+      "clinics": "மருத்துவமனைகள்"
+    }
   },
   "nav": {
     "sos": "SOS",
